# tinycim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt
cli/src/: client.c  client.h  cliparse.c  cliparse.h  common.h  main.c  server.c  server.h
libtinycim/: CMakeLists.txt
libtinycim/include/: imclient.h
libtinycim/src/: imclient.c
